# media-gathering

./: .gitignore  Crawler.py  DBControl.py  DBControlar.py  EXTERNAL_LIBRARY.md  FavCrawler.py  LICENSE  MediaGathering.py  PictureGathering.py  PictureGathering_fav.py  PictureGathering_retweet.py  README.md  README_en.md  README_ja.md  RetweetCrawler.py  Test_Crawler.py  Test_DBControl.py  Test_PictureGathering.py  WriteHTML.py  config_example.ini  media_gathering.py  pyproject.toml  requirements.txt
.github/: .coveragerc
.github/workflows/: .gitignore  EncryptConfig.py  ci.yml  encrypt.ini  encrypt_config_ci.ini  encrypt_credentials_ci.json
PictureGathering/: Archiver.py  Auth.py  Crawler.py  DBController.py  DBControllerBase.py  FavCrawler.py  FavDBController.py  GoogleDrive.py  LSNicoSeiga.py  LSNijie.py  LSPixiv.py  LSPixivNovel.py  LSSkeb.py  LinkSearchBase.py  LogMessage.py  Model.py  NijieScraping.py  PixivAPIController.py  RetweetCrawler.py  RetweetDBController.py  Util.py  WriteHTML.py
PictureGathering/LinkSearch/: FetcherBase.py  LSNicoSeiga.py  LSNijie.py  LSPixiv.py  LSPixivNovel.py  LSSkeb.py  LinkSearchBase.py  LinkSearcher.py  Password.py  PixivFetcher.py  PixivIllustDownloader.py  PixivIllustURLList.py  PixivNovelDownloader.py  PixivNovelFetcher.py  PixivNovelSaveDirectoryPath.py  PixivNovelURL.py  PixivSaveDirectoryPath.py  PixivURL.py  PixivUgoiraDownloader.py  PixivWorkURL.py  URL.py  Username.py
PictureGathering/Screenshot/: Screenshot.py  URL.py
PictureGathering/html_writer/: HtmlWriter.py
PictureGathering/noapi/: Cookies.py  LocalStorage.py  NoAPILikeFetcher.py  NoAPIRetweetFetcher.py  TweetInfo.py  TwitterAPIClientAdapter.py  TwitterSession.py
PictureGathering/tac/: FetcherBase.py  LikeFetcher.py  LikeParser.py  ParserBase.py  RetweetFetcher.py  RetweetParser.py  TwitterAPIClientAdapter.py
PictureGathering/v2/: .gitignore  Like.py  LikeFetcher.py  LikeInfo.py  Retweet.py  RetweetFetcher.py  RetweetInfo.py  TweetInfo.py  TwitterAPI.py  TwitterAPIEndpoint.py  V2Base.py  api_response_test.txt  api_response_test_lookup.txt  sandbox.py  twitter_api_setting.json
config/: .gitignore  config_example.ini  config_sample.json  encrypt.ini
log/: logging.ini
media_gathering/: Crawler.py  DBControllerBase.py  FavCrawler.py  FavDBController.py  LogMessage.py  Model.py  RetweetCrawler.py  RetweetDBController.py  crawler.py  db_controller_base.py  fav_db_controller.py  retweet_crawler.py  retweet_db_controller.py
media_gathering/LinkSearch/: FetcherBase.py  LinkSearcher.py  Password.py  URL.py
media_gathering/html_writer/: HtmlWriter.py  html_writer.py
media_gathering/link_search/: FetcherBase.py  LinkSearcher.py  Username.py  link_searcher.py
media_gathering/tac/: FetcherBase.py  LikeFetcher.py  LikeParser.py  ParserBase.py  (+10 more)
mermaid/: sequence.md
src/: Crawler.py  FavCrawler.py  RetweetCrawler.py  WriteHTML.py  main.py
test/: Test_Archiver.py  Test_Crawler.py  Test_DBControl.py  Test_DBControllerBase.py  Test_FavCrawler.py  Test_FavDBController.py  Test_GoogleDrive.py  Test_LSNicoSeiga.py  Test_LSNijie.py  Test_LSPixiv.py  Test_LinkSearchBase.py  Test_Model_DeleteTarget.py  Test_Model_ExternalLink.py  Test_Model_Favorite.py  Test_Model_Retweet.py  Test_NijieScraping.py  Test_PixivAPIController.py  Test_RetweetCrawler.py  Test_RetweetDBController.py  Test_Util.py  Test_WriteHTML.py
tests/: Test_Crawler.py  Test_DBControllerBase.py  Test_FavCrawler.py  Test_FavDBController.py  Test_Model_Retweet.py  Test_RetweetCrawler.py  Test_RetweetDBController.py  Test_Util.py  test_crawler.py  test_db_controller_base.py  test_fav_crawler.py  test_fav_db_controller.py  test_model_Favorite.py  test_model_Retweet.py  test_model_delete_target.py  test_model_external_link.py  test_retweet_crawler.py  test_retweet_db_controller.py  test_util.py
uml/: as_is.pu  to_be.pu
(+458 files in other folders)
